@@ -166,6 +166,8 @@ class cl_console_base: public cl_base
   virtual void tu_hide(void);
   virtual void tu_show(void);
   virtual void tu_color(int bg, int fg);
+  virtual void tu_bgcolor(int bg);
+  virtual void tu_fgcolor(int fg);
   virtual void tu_mouse_on(void);
   virtual void tu_mouse_off(void);
   virtual void tu_reset(void);
