@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Mikrocontroller Simulator</title>
+    <title>Microcontroller Simulator</title>
   </head>
   <body style="    background-color: white;"> [ <a href="news.html">News</a> ]
     [ <a href="#download">Download</a> ] [ <a href="#install">Installation</a>
@@ -22,9 +22,35 @@
     <h1>Software simulator for microcontrollers</h1>
     
     <p><b><i>&micro;Csim</i></b> can be used to simulate
-    microcontrollers. It supports MCS51 family, AVR core, Z80, HC08,
-    ST7, STM8, TLCS90, XA51 and Padauk. It can run on Linux, Windows,
-      OSX, BSD, and other systems.</p>
+      microcontrollers. It supports
+
+      <ul><li>Intel:
+	<ul><li>MCS51 family,</li>
+	  <li>MCS48,</li>
+	  <li>MCS80, MCS85</li>
+	</ul></li>
+	<li>XA51,</li>
+	<li>AVR core,</li>
+	<li>Z80,</li>
+	<li>TLCS90,</li>
+	<li>Rabbit (r2k, r3k, r4k, r5k)</li>
+	<li>Motorola:
+	  <ul><li>6800,</li>
+	    <li>6809,</li>
+	    <li>68hc08,</li>
+	    <li>68hc11,</li>
+	    <li>68hc12,</li>
+	  </ul></li>
+	<li>6502,</li>
+	<li>ST7,</li>
+	<li>STM8,</li>
+	<li>Padauk,</li>
+	<li>PicoBlaze,</li>
+	<li><a href="http://mazsola.iit.uni-miskolc.hu/d/softproc">p1516, p2223</a> soft processors,</li>
+	<li>F8 soft processor.</li>
+      </ul>
+      
+      It can run on Linux, Windows, OSX, BSD, and other systems.</p>
 
     <p>See <a href="news.html">what's new</a> in current version.</p>
       
@@ -48,7 +74,13 @@
       
       <h2><a name="install">How to install</a></h2>
       
-      <p>UNIX version is distributed in source.</p>
+      <p>UNIX version is distributed in source, pre-compiled debian
+	stable package for i386 and amd64 architecture.</p>
+
+      <p>Windows version distributed as a setup executable and as a
+	portable zip package.</p>
+
+      <h3>How to compile from source</h3>
       
     <ol>
 
