@@ -34,8 +34,23 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA
 class cl_general_uc: public cl_uc
 {
 public:
+  u8_t r;
+public:
   cl_general_uc(cl_sim *s): cl_uc(s) {}
   virtual void make_memories(void);
+  virtual int exec_inst()
+  {
+    t_mem code;
+    if (fetch(&code))
+      return resBREAKPOINT;
+    tick(1);
+    r= rom->read(PC);
+    vc.rd++;
+    rom->write(PC, r+1);
+    vc.wr++;
+    r= 34;
+    return resGO;
+  }
 };
 
 void
@@ -49,7 +64,7 @@ cl_general_uc::make_memories(void)
   as->init();
   address_spaces->add(as);
 
-  ch= new cl_chip8("chip", 0x100000, 8, 0);
+  ch= new cl_chip8("chip", 0x100000, 8/*, 0*/);
   ch->init();
   memchips->add(ch);
   
@@ -75,15 +90,15 @@ main(int argc, char *argv[])
 {
   int ret;
   class cl_sim *sim;
+  volatile double fd, id;
+  unsigned int i= 0;
   
   app_start_at= dnow();
   {
-    volatile double d= 0;
-    unsigned int i= 0;
-    while (++i < 100000000) d+= 1.0;
-    d= dnow()-app_start_at;
-    d= 100.0/d;
-    printf("%f\n", d);
+    fd= 0;
+    while (++i < 100000000) fd+= 1.0;
+    fd= dnow()-app_start_at;
+    fd= 100.0/fd;
   }
   application= new cl_app();
   application->set_name("ucsim");
@@ -92,6 +107,15 @@ main(int argc, char *argv[])
   if (sim->init())
     sim->state|= SIM_QUIT;
   application->set_simulator(sim);
+  {
+    id= dnow();
+    i= 0;
+    while (++i < 1000000) sim->step();
+    id= dnow() - id;
+    id= (1.0*1000)/id;
+    fprintf(stderr, "\n%f MFlop ", fd);
+    fprintf(stderr, "%f kips\n", id);
+  }
   ret= application->run();
   application->done();
   return(ret);
